tests/ui/convert_from_str_sealed.stderr
error[E0277]: the trait bound `MyType: FromStr` is not satisfied
  --> $DIR/convert_from_str_sealed.rs:9:9
   |
9  | impl<E> ConvertFromStr<E> for MyType {
   |         ^^^^^^^^^^^^^^^^^ the trait `FromStr` is not implemented for `MyType`
   |
  ::: $WORKSPACE/src/conversion.rs
   |
   | pub trait ConvertFromStr<Err>: private::Sealed1 + Sized {
   |                                ---------------- required by this bound in `ConvertFromStr`
   |
   = note: required because of the requirements on the impl of `conversion::private::Sealed1` for `MyType`
